force-app/main/default/objects/SIS_Plan_Requirement_Offering__c/SIS_Plan_Requirement_Offering__c.object-meta.xml
<CustomObject>
    <label>Offre d&apos;obligation pédagogique</label>
    <nameField>
        <displayFormat>PRO-{0000}</displayFormat>
        <label>Nom de l&apos;enregistrement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offres d&apos;obligation pédagogique</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>