force-app/main/default/objects/SIS_Plan_Requirement_Offering__c/fields/SIS_Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Offres d&apos;obligation pédagogique</relationshipLabel>
    <relationshipName>Offres_d_obligation_pedagogique</relationshipName>
    <type>Lookup</type>
</CustomField>