force-app/main/default/objects/SIS_Plan_Requirement_Offering__c/fields/SIS_Plan_Requirement__c.field-meta.xml
<CustomField>
    <fullName>SIS_Plan_Requirement__c</fullName>
    <label>Plan Requirement</label>
    <referenceTo>hed__Plan_Requirement__c</referenceTo>
    <relationshipLabel>Offres d&apos;obligation pédagogique</relationshipLabel>
    <relationshipName>Offres_d_obligation_pedagogique</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>