force-app/main/default/objects/SIS_Plan_Requirement_Offering__c/fields/SIS_Program_Path__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_Path__c</fullName>
    <label>Program Path</label>
    <referenceTo>SIS_Program_Path__c</referenceTo>
    <relationshipLabel>Offres d&apos;obligation pédagogique</relationshipLabel>
    <relationshipName>Offres_d_obligation_pedagogique</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>